# EOTW_tea_and_snow

./: LICENSE  README.md  readme.md
TeaAndSnowMP/: app.js  app.json  project.config.json  project.private.config.json
TeaAndSnowMP/components/navigation-bar/: navigation-bar.js  navigation-bar.wxml  navigation-bar.wxss
TeaAndSnowMP/config/: config.js
TeaAndSnowMP/doc/: readme.md
TeaAndSnowMP/pages/index/: index.js  index.wxml  index.wxss
TeaAndSnowMP/pages/item_intro/: item_intro.js  item_intro.wxml  item_intro.wxss
TeaAndSnowMP/pages/menu/: menu.js  menu.wxml  menu.wxss
TeaAndSnowMP/pages/my_page/: my_page.js  my_page.wxml  my_page.wxss
TeaAndSnowMP/pages/order/: order.js  order.wxml  order.wxss
TeaAndSnowServer/: openapi.json  pyproject.toml
TeaAndSnowServer/app/: main.py
TeaAndSnowServer/app/core/: config.py  database.py
TeaAndSnowServer/app/models/: models.py
TeaAndSnowServer/app/routers/: cart.py  menu.py  order.py  user.py
TeaAndSnowServer/app/schemas/: schemas.py
TeaAndSnowServer/app/utils/: auth.py  upload.py
TeaAndSnowServer/scripts/: banners.sql  banners_insert.sql  carts.sql  categories.sql  categories_insert.sql  order_items.sql  orders.sql  tea_items.sql  tea_items_insert.sql  users.sql
